RESOLVED FIXED193651
[GTK] Speculative build fix for Ubuntu LTS
https://bugs.webkit.org/show_bug.cgi?id=193651
Summary [GTK] Speculative build fix for Ubuntu LTS
Claudio Saavedra
Reported 2019-01-21 02:50:45 PST
[GTK] Speculative build fix for Ubuntu LTS
Attachments
Patch (955 bytes, patch)
2019-01-21 02:54 PST, Claudio Saavedra
no flags
Patch for landing (955 bytes, patch)
2019-01-21 04:53 PST, Claudio Saavedra
no flags
Claudio Saavedra
Comment 1 2019-01-21 02:54:23 PST
Claudio Saavedra
Comment 2 2019-01-21 04:53:48 PST
Created attachment 359684 [details] Patch for landing
WebKit Commit Bot
Comment 3 2019-01-21 05:32:07 PST
Comment on attachment 359684 [details] Patch for landing Clearing flags on attachment: 359684 Committed r240234: <https://trac.webkit.org/changeset/240234>
WebKit Commit Bot
Comment 4 2019-01-21 05:32:08 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2019-01-21 05:33:39 PST
Note You need to log in before you can comment on or make changes to this bug.